--- a/config/locales/views/users/en.yml
+++ b/config/locales/views/users/en.yml
@@ -7,7 +7,7 @@ en:
      likedspots: "List of favorite spots"
      mypagetitle: "My page"
      no_favorited: "This user doesn't favorite asy spots"
-     selectimage: "select a image"
+     selectimage: "Select a image"
     edit:
       <<: *user_common
     favorites:
